--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,10 +28,10 @@
             <div class="col col-md-2 image-col">
             </div>
             <div class="col col-md-8 text-col">
-                <h5 class="mb-1">{{date.id}}</h5>
+                <h5 class="mb-1">{{date}}</h5>
             </div>
             <div class="col col-md-2 actions-col">
-                <button class="btn btn-outline-primary action" (click)="toBoards(date.id)" type="button">
+                <button class="btn btn-outline-primary action" (click)="toBoards(date)" type="button">
           <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
         </button>
             </div>
