--- a/src/app/titles/titles.component.html
+++ b/src/app/titles/titles.component.html
@@ -28,10 +28,10 @@
             <div class="col col-md-2 image-col">
             </div>
             <div class="col col-md-8 text-col">
-                <h5 class="mb-1">{{title}}</h5>
+                <h5 class="mb-1">{{title.title}}</h5>
             </div>
             <div class="col col-md-2 actions-col">
-                <button class="btn btn-outline-primary action" (click)="toContent(i)" type="button">
+                <button class="btn btn-outline-primary action" (click)="toContent(title.id)" type="button">
         <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
       </button>
             </div>
